# WeDPR-Lab-Crypto

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Changelog.md  README.md  cobertura.xml  rust-toolchain
.github/workflows/: coverage.yml  default_test.yml  features_test.yml  release.yml  workflow.yml
common/: Cargo.toml
common/benches/: signature.rs
common/coder/base64/: Cargo.toml
common/coder/base64/src/: lib.rs
common/coder/hex/: Cargo.toml
common/coder/hex/src/: lib.rs
common/macros/: Cargo.toml
common/macros/src/: lib.rs
common/src/: constant.rs  error.rs  lib.rs
common/src/utils/: mod.rs
common/utils/: Cargo.toml
common/utils/src/: constant.rs  error.rs  lib.rs  tool.rs  traits.rs
crypto/: Cargo.toml
crypto/benches/: signature.rs  vrf.rs
crypto/block_cipher/aes/: Cargo.toml
crypto/block_cipher/aes/src/: lib.rs
crypto/block_cipher/sm4/: Cargo.toml
crypto/block_cipher/sm4/src/: lib.rs
crypto/ecc/ecc_ed25519/: Cargo.toml
crypto/ecc/ecc_ed25519/src/: lib.rs
crypto/ecc/ecc_edwards25519/: Cargo.toml
crypto/ecc/ecc_edwards25519/src/: lib.rs
crypto/ecc/ffi_java_ecc_ed25519/: Cargo.toml
crypto/ecc/ffi_java_ecc_ed25519/src/: lib.rs
crypto/ecc/ffi_wasm_ecc_ed25519/: Cargo.toml  readme.md
crypto/ecc/ffi_wasm_ecc_ed25519/src/: lib.rs
crypto/ecies/secp256k1/: Cargo.toml
crypto/ecies/secp256k1/src/: lib.rs
crypto/ecies/sm2/: Cargo.toml
crypto/ecies/sm2/benches/: sm2.rs
crypto/ecies/sm2/src/: lib.rs
crypto/hash/blake2b/: Cargo.toml
crypto/hash/blake2b/src/: lib.rs
crypto/hash/keccak256/: Cargo.toml
crypto/hash/keccak256/src/: lib.rs
crypto/hash/ripemd160/: Cargo.toml
crypto/hash/ripemd160/src/: lib.rs
crypto/hash/sha2/: Cargo.toml
crypto/hash/sha2/src/: lib.rs
crypto/hash/sha3/: Cargo.toml
crypto/hash/sha3/src/: lib.rs
crypto/hash/sm3/: Cargo.toml
crypto/hash/sm3/src/: lib.rs
crypto/oblivious_transfer/base_ot/: Cargo.toml
crypto/oblivious_transfer/base_ot/benches/: base_ot.rs
crypto/oblivious_transfer/base_ot/src/: k_out_of_n.rs  lib.rs  one_out_of_n.rs  one_out_of_two.rs  ot_kv.rs  ot_message.rs  utils.rs
crypto/oblivious_transfer/base_ot_mod/: Cargo.toml
crypto/oblivious_transfer/base_ot_mod/benches/: base_ot.rs
crypto/oblivious_transfer/base_ot_mod/src/: constant.rs  lib.rs  utils.rs
crypto/oblivious_transfer/kkrt/: Cargo.toml
crypto/oblivious_transfer/kkrt/src/: lib.rs  m_out_of_n.rs
crypto/pairing/bls12_381/: Cargo.toml
crypto/pairing/bls12_381/benches/: pairing.rs
crypto/pairing/bls12_381/src/: lib.rs  peks.rs
crypto/signature/ed25519/: Cargo.toml
crypto/signature/ed25519/src/: lib.rs
crypto/signature/secp256k1/: Cargo.toml
crypto/signature/secp256k1/benches/: secp256k1.rs
crypto/signature/secp256k1/src/: lib.rs
crypto/signature/sm2/: Cargo.toml
crypto/signature/sm2/benches/: sm2.rs
crypto/signature/sm2/src/: lib.rs
crypto/src/: curve_25519_vrf.rs  hash.rs  lib.rs  utils.rs
crypto/src/signature/: mod.rs  secp256k1.rs  sm2.rs
crypto/vrf/curve25519/: Cargo.toml
crypto/vrf/curve25519/src/: lib.rs
crypto/vrf/secp256k1/: Cargo.toml
crypto/vrf/secp256k1/src/: lib.rs
crypto/zkp/discrete_logarithm_proof/: Cargo.toml
crypto/zkp/discrete_logarithm_proof/benches/: dlp.rs
crypto/zkp/discrete_logarithm_proof/src/: lib.rs
crypto/zkp/range_proof/: Cargo.toml
crypto/zkp/range_proof/src/: lib.rs
crypto/zkp/utils/: Cargo.toml
crypto/zkp/utils/src/: config.rs  lib.rs
ffi/ffi_android/: Cargo.toml  readme.md
ffi/ffi_android/java/com/webank/wedpr/android/: CryptoResult.java  NativeInterface.java
ffi/ffi_android/src/: lib.rs
ffi/ffi_c/ffi_c_common/: Cargo.toml
ffi/ffi_c/ffi_c_common/src/: lib.rs
ffi/ffi_c/ffi_c_crypto/: Cargo.toml  README.md
ffi/ffi_c/ffi_c_crypto/include/: WeDPRCrypto.h
ffi/ffi_c/ffi_c_crypto/src/: binary_hash.rs  binary_signature.rs  block_cipher.rs  config.rs  ecies.rs  hash.rs  lib.rs  signature.rs  vrf.rs  vrf_secp256k1.rs
ffi/ffi_c/ffi_c_crypto_binary/: Cargo.toml
ffi/ffi_c/ffi_c_crypto_binary/src/: block_cipher.rs  config.rs  ecies.rs  hash.rs  lib.rs  signature.rs  vrf.rs  vrf_secp256k1.rs
ffi/ffi_c/ffi_c_ecc_edwards25519/: Cargo.toml
ffi/ffi_c/ffi_c_ecc_edwards25519/src/: lib.rs
ffi/ffi_c/ffi_c_equality/: Cargo.toml  wedpr_ffi_c_equality.h
ffi/ffi_c/ffi_c_equality/src/: lib.rs
ffi/ffi_c/ffi_c_fisco/: Cargo.toml
ffi/ffi_c/ffi_c_fisco/src/: bn128.rs  lib.rs
ffi/ffi_c/ffi_c_fisco_bcos/: Cargo.toml
ffi/ffi_c/ffi_c_fisco_bcos/src/: bn128.rs  lib.rs
ffi/ffi_c/ffi_c_zkp/: Cargo.toml
ffi/ffi_c/ffi_c_zkp/src/: discrete_logarithm_proof.rs  lib.rs  utils.rs
ffi/ffi_common/: Cargo.toml
ffi/ffi_common/src/: lib.rs  utils.rs
ffi/ffi_ecies/: Cargo.toml  build.rs  ffi_ecies.h  output  test.cpp
ffi/ffi_ecies/java/com/webank/wedpr/ecies/: EciesResult.java  NativeInterface.java
ffi/ffi_ecies/src/: lib.rs
ffi/ffi_ios/: Cargo.toml  build.rs  wedpr_ios.h
ffi/ffi_ios/cpp/: ffi_ecies.h  ffi_ios
ffi/ffi_ios/src/: lib.rs
ffi/ffi_java/ffi_java_crypto/: Cargo.toml  README.md
ffi/ffi_java/ffi_java_crypto/src/: block_cipher.rs  config.rs  ecies.rs  hash.rs  lib.rs  signature.rs  vrf.rs
ffi/ffi_java/ffi_java_crypto_binary/: Cargo.toml
ffi/ffi_java/ffi_java_crypto_binary/src/: config.rs  (+6 more)
ffi/ffi_java/ffi_java_ecc_edwards25519/: Cargo.toml
ffi/ffi_java/ffi_java_equality/: Cargo.toml
ffi/ffi_java/ffi_java_fisco_bcos_sdk/: Cargo.toml  README.md
ffi/ffi_java_sdk/: Cargo.toml
ffi/ffi_java_sdk/java/com/webank/wedpr/crypto/: CryptoResult.java  NativeInterface.java
ffi/ffi_java_sdk/src/: hash.rs  lib.rs  secp256k1.rs  sm2.rs  vrf.rs
ffi/ffi_macros/: Cargo.toml
ffi/ffi_macros/src/: binary.rs  lib.rs
ffi/ffi_vrf/: Cargo.toml  build.rs
ffi/ffi_vrf/cpp/: ffi_vrf.h  test.cpp
ffi/ffi_vrf/src/: lib.rs
ffi/ffi_wasm/ffi_wasm_ecc_edwards25519/: Cargo.toml
ffi/ffi_wasm/ffi_wasm_web_equlity/: Cargo.toml
libsm/: Cargo.toml
libsm/src/sm2/: signature.rs
macros/: Cargo.toml
macros/src/: lib.rs
protos/: Cargo.toml
protos/crypto/: common.proto  ot.proto  zkp.proto
protos/src/: lib.rs  main.rs
(+6 files in other folders)
