[workspace]

members = [
    "common/coder/base64",
    "common/coder/hex",
    "common/macros",
    "common/utils",
    "crypto/ecies/secp256k1",
    "crypto/hash/keccak256",
    "crypto/hash/sm3",
    "crypto/hash/sha3",
    "crypto/hash/blake2b",
    "crypto/hash/ripemd160",
    "crypto/signature/secp256k1",
    "crypto/signature/ed25519",
    "crypto/signature/sm2",
    "crypto/vrf/curve25519",
    "crypto/zkp/discrete_logarithm_proof",
    "crypto/zkp/range_proof",
    "crypto/zkp/utils",
    "crypto/block_cipher/aes",
    "crypto/block_cipher/sm4",
    "ffi/ffi_common",
    "ffi/ffi_c/ffi_c_common",
    "ffi/ffi_c/ffi_c_crypto",
    "ffi/ffi_java/ffi_java_crypto",
    "ffi/ffi_macros",
    "protos",
    "third_party/fisco_bcos"
]
