[workspace]
members = [
    "common/coder/base64",
    "common/coder/hex",
    "common/macros",
    "common/utils",
    "crypto/block_cipher/aes",
    "crypto/block_cipher/sm4",
    "crypto/ecies/secp256k1",
    "crypto/hash/blake2b",
    "crypto/hash/keccak256",
    "crypto/hash/ripemd160",
    "crypto/hash/sha3",
    "crypto/hash/sm3",
    "crypto/oblivious_transfer/base_ot",
    "crypto/signature/ed25519",
    "crypto/signature/secp256k1",
    "crypto/signature/sm2",
    "crypto/vrf/curve25519",
    "crypto/zkp/discrete_logarithm_proof",
    "crypto/zkp/range_proof",
    "crypto/zkp/utils",
    "ffi/ffi_c/ffi_c_common",
    "ffi/ffi_c/ffi_c_crypto",
    "ffi/ffi_c/ffi_c_crypto_binary",
    "ffi/ffi_c/ffi_c_fisco_bcos",
    "ffi/ffi_common",
    "ffi/ffi_java/ffi_java_crypto",
    "ffi/ffi_java/ffi_java_crypto_binary",
    "ffi/ffi_java/ffi_java_fisco_bcos_sdk",
    "ffi/ffi_macros",
    "protos",
    "third_party/fisco_bcos",
    "third_party/fisco_bcos_java_sdk",
]
