[package]
name = "crypto"
version = "0.1.0"
authors = ["HaoXuan40404 <444649358@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }
base64 = "0.12.1"
wedpr_macros = { path = "../macros/"}
sha3 = "0.8.2"
secp256k1 = { version = "0.17.2", features = ["rand"] } # recovery
curve25519-dalek = { version = "1", features = ["serde"] }
libsm = "0.3.0"
rand = "0.6"

[dev-dependencies]
criterion = "0.3"
#
#[[bench]]
#name = "signature"
#harness = false

[[bench]]
name = "vrf"
harness = false