[package]
name = "ffi_android"
version = "0.1.0"
authors = ["HaoXuan40404 <444649358@qq.com>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_android"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = "0.13.0"
libc = "0.2.60"
regex = "1.3.4"
hex = "0.3"
ffi_common = { path = "../ffi_common/" }
common = { path = "../../common/"}
wedpr_macros = { path = "../../macros/"}
ecies = "0.1.4"
ffi_macros = { path = "../ffi_macros/"}
crypto = {path = "../../crypto/"}

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.13.1", default-features = false }
