[package]
name = "ffi_common"
version = "0.2.0"
authors = ["fqliao <fqliao@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common/" }
ffi_macros = { path = "../ffi_macros/"}
jni = "0.13.0"
libc = "0.2.60"
protobuf = "2.10.1"
regex = "1.3.4"
wedpr_macros = { path = "../../macros/"}
