[package]
name = "wedpr_ffi_common"
version = "1.0.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR ffi shared common utils."

[features]
default = [ "wedpr_f_base64" ]
wedpr_f_base64 = [ "wedpr_l_common_coder_base64" ]
wedpr_f_hex = [ "wedpr_l_common_coder_hex" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.13.0"
lazy_static = "1.4.0"

libc = "0.2.60"
wedpr_ffi_macros = { git = "https://github.com.cnpmjs.org/WeBankBlockchain/WeDPR-Lab-Crypto.git", branch = "v1.1.0" }
wedpr_l_common_coder_base64 = { path = "../../common/coder/base64", optional = true }
wedpr_l_common_coder_hex = { path = "../../common/coder/hex", optional = true }
wedpr_l_macros = "1.0.0"
wedpr_l_utils = { path = "../../common/utils" }
