[package]
name = "wedpr_l_common_coder_base64"
version = "0.0.1"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR base64."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
wedpr_l_macros = "0.0.1"
wedpr_l_utils = "0.0.1"
