[package]
name = "ffi_java_ecc_ed25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_java_ecc_ed25519"
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
jni = "0.13.0"
ecc_ed25519 = { path = "../ecc_ed25519"}