[package]
name = "wedpr_l_crypto_ecies_secp256k1"
version = "1.0.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared ecies."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecies = "0.1.4"
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.0.0"
