[package]
name = "wedpr_l_crypto_ecies_sm2"
version = "1.1.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared ecies."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsm = "0.5.0"
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.1.0"
lazy_static = "1.4.0"

[dev-dependencies]
rand = "0.6.0"
