[package]
name = "wedpr_l_crypto_hash_keccak256"
version = "0.0.1"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared Hash Function implement by keccak256."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.8"
wedpr_l_macros = "0.0.1"
wedpr_l_utils = "0.0.1"
