[package]
name = "wedpr_l_crypto_hash_ripemd160"
version = "1.0.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared Hash Function implement by blake2."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ripemd160 = "0.9.1"
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.1.0"
