[package]
name = "wedpr_l_crypto_ot_base_ot"
version = "0.2.0"
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared zkp Function implement base ot."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "1.0", features = [ "serde" ] }
wedpr_l_crypto_zkp_utils = { version = "1.3.0", path = "../../zkp/utils"}
wedpr_l_crypto_hash_sha3 = { version = "1.0.0" }
lazy_static = "1.4.0"
wedpr_l_utils = "1.1.0"
sha3 = "0.8"
rand = "0.6"
rand_core = { version = "0.5", features = ["getrandom"]}
wedpr_l_crypto_block_cipher_aes = { version = "1.0.0",  path = "../../block_cipher/aes" }
wedpr_l_macros = "1.0.0"
wedpr_l_protos =  { path = "../../../protos" }



[dev-dependencies]
criterion = "0.3"
rand = "0.6.0"

[[bench]]
name = "base_ot"
harness = false