[package]
name = "kkrt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wedpr_l_crypto_ot_base_ot = { path = "../base_ot"}
curve25519-dalek = { version = "3", features = [ "serde" ] }
wedpr_l_crypto_zkp_utils = { path = "../../zkp/utils" }
