[package]
name = "wedpr_bls12_381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "0.7.0", features = [ "experimental" ] }
#rand_core = "0.6"
rand = "0.8.0"
sha2 = "0.9"
ff = "0.12"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pairing"
harness = false