[package]
name = "wedpr_bls12_381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "0.7.0", features = [ "experimental" ] }
rand = "0.8.0"
sha2 = "0.9"
ff = "0.12"
wedpr_l_utils = "1.1.0"
wedpr_l_macros = "1.0.0"
wedpr_l_crypto_hash_sha2 = { path = "../../hash/sha2" }


[dev-dependencies]
criterion = "0.3"
hex = "0.4.2"

[[bench]]
name = "pairing"
harness = false