[package]
name = "wedpr_l_crypto_signature_ed25519"
version = "1.1.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared Siganture Function implement by ed25519."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "1.0.1" }
lazy_static = "1.4.0"
rand = "0.7"

wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.1.0"
