[package]
name = "wedpr_l_crypto_signature_secp256k1"
version = "1.0.1"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared Siganture Function implement by secp256k1."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.6"
secp256k1 = { version = "0.19.0", features = [ "recovery", "rand" ] }
wedpr_l_macros = "1.0.0"
wedpr_l_utils = { path = "/Users/asher/WeDPR/WeDPR-Lab-Crypto/common/utils/"}
