[package]
name = "wedpr_l_crypto_signature_secp256k1"
version = "1.1.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared Siganture Function implement by secp256k1."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
secp256k1 = { version = "0.26.0", features = [ "recovery", "rand", "rand-std" ] }
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.1.0"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "secp256k1"
harness = false
