[package]
name = "wedpr_l_crypto_signature_sm2"
version = "1.0.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
wedpr_l_libsm = "0.3.1"
wedpr_l_macros = { path = "../../../common/macros", version = "1.0.0" }
wedpr_l_utils = { path = "../../../common/utils", version = "1.0.0" }
