[package]
name = "wedpr_l_crypto_signature_sm2"
version = "1.1.1"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared Siganture Function implement by sm2."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
wedpr_l_libsm = "0.3.5"
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sm2"
harness = false
