[package]
name = "wedpr_l_crypto_vrf_curve25519"
version = "1.0.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "1", features = [ "serde" ] }
rand = "0.6"
sha3 = "0.8.2"
wedpr_l_crypto_hash_keccak256 = { path = "../../hash/keccak256", version = "1.0.0" }
wedpr_l_crypto_zkp_utils = { path = "../../zkp/utils", version = "1.0.0" }
wedpr_l_macros = { path = "../../../common/macros", version = "1.0.0" }
wedpr_l_utils = { path = "../../../common/utils", version = "1.0.0" }
