[package]
name = "wedpr_l_crypto_vrf_curve25519"
version = "1.1.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared VRF Function implement by curve25519."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "1", features = [ "serde" ] }
rand = "0.6"
sha3 = "0.8.2"
wedpr_l_crypto_hash_keccak256 = "1.1.0"
wedpr_l_crypto_zkp_utils = "1.2.0"
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.1.0"
