[package]
name = "wedpr_l_crypto_vrf_secp256k1"
version = "1.4.0"
authors = ["WeDPR <wedpr@webank.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared VRF Function implement by secp256k1."

[dependencies]
k256 = { version = "0.13.4", features = ["serde", "arithmetic"] }
rand = "0.6"
sha2 = "0.10.8"
wedpr_l_crypto_hash_keccak256 = "1.1.0"
wedpr_l_crypto_zkp_utils = "1.2.0"
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.1.0"
serde = { version = "=1.0.171", features = ["derive"] }
